--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -4,17 +4,18 @@
   apt:
      update_cache: yes
   become: true
+
 # Docker install
 - name: Docker install
   shell: "apt update && apt install -y curl && curl https://get.docker.com -o install.sh && sh install.sh"
   become: true
 
 # Add user student to run Docker
-- name: Docker install
+- name: Add user "student" to run Docker
   shell: "chown student:docker /var/run/docker.sock"
   become: true
 
 # Restart Docker on host
-- name: Docker install
+- name: Restart Docker service
   shell: "service docker restart"
   become: true
